Various SEO improvements

--- a/blog.html
+++ b/blog.html
@@ -89,7 +89,7 @@
         </div>
         <div class="hero center">
             <div class="container-1140">
-                <h1>Blog</h1>
+                <h1>Sybiltec's Blog</h1>
                 <h4>Keeping You Updated</h4>               
             </div>
         </div>
@@ -224,8 +224,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltech logo">
-                    <p class="center"><a href="#">Back to top</a></p>
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
         </div>
