--- a/clients.html
+++ b/clients.html
@@ -13,12 +13,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Clients | London Web Design & Development | Sybiltec</title>       
-        <meta name="Description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of projects here.">
+        <meta name="Description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of clients here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Clients | London Web Design & Development | Sybiltec" />
-        <meta property="og:description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of projects here." />
+        <meta property="og:description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of clients here." />
         <meta property="og:url" content="https://sybiltec.com/clients" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -89,15 +89,12 @@
         </div>
         <div class="hero center">
             <div class="container-1140">
-                <h1>Clients</h1>        
+                <h1>Sybiltec's Clients</h1>        
             </div>
         </div>
         <div class="main section">
             <div class="container-1140 padding-top padding-bottom">  
-
-                <div id="back-to-top" style="position: fixed; bottom: 20px; right: 20px;">
-                    <a href="#"><p style="font-size: 24px">↑</p></a>
-                </div>
+                <h2>Clients I've Worked With</h2>
 
                 <p>Throughout my freelancing career, I've helped clients from a wide range of industries achieve their goal of improving their online presence. Here is a selection of clients who I've worked with recently.</p>
                 <div class="portfolio">
@@ -186,8 +183,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltech logo">
-                    <p class="center"><a href="#">Back to top</a></p>
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
         </div>
