--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <a class="btn-primary" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a>
                     </div>
                     <div class="col-4">
-                        <img src="images/Sybil-Mayard.jpg">
+                        <img src="images/Sybil-Mayard.jpg" alt="Headshot of Sybil Mayard">
                     </div>
                 </div>
             </div>
@@ -267,7 +267,7 @@
                     <div class="mySlides fade">
                         <q>I would highly recommend Sybil; she listens and completely understands what I am asking for.<br>Her knowledge of Shopify is excellent and knows how to implement what I need.</q>
                         <div class="center">
-                            <img src="images/logos/the-bamboo-wardrobe-logo.png" alt="The Bamboo Wardrobe">
+                            <img src="images/logos/the-bamboo-wardrobe-logo.png" alt="The Bamboo Wardrobe logo">
                         </div>
                         <h4>Caroline Wardell</h4>
                         <p class="center">Founder,<br>The Bamboo Wardrobe</p>
@@ -275,7 +275,7 @@
                     <div class="mySlides fade">
                         <q>The final product is sleek, clean and professional looking. Sybil listened, did not impose a 'manufactured easy to do template' webpage on us. She managed our expectations beautifully and delivered a service which is best characterised by 'above and beyond'. Sybil simply delivered; she certainly commits her knowledge, skill and innovative entrepreneurial mind to benefit for her customer.</q>
                         <div class="center">
-                            <img src="images/logos/nerowireart.png" alt="Nerowireart">
+                            <img src="images/logos/nerowireart.png" alt="Nerowireart logo">
                         </div>
                         <h4>Dr Zita Stone</h4>
                         <p class="center">Founder,<br>Nerowireart</p>
@@ -283,7 +283,7 @@
                     <div class="mySlides fade">
                         <q>Sybil is totally client-focused. She morphs design and technical knowledge beautifully. She produces such high quality websites whilst being able to commit to deadlines. Sybil works so hard to bring clients bespoke websites! I am so happy with the support I received and over the moon with the way my website looks! I have been recommending Sybil to everyone and won't stop! She's amazing!</q>
                         <div class="center">
-                            <img src="https://sybiltec.com/images/logos/happily-clappily-ever-laughter-logo.png" alt="Happily Clappily Ever Laughter">
+                            <img src="https://sybiltec.com/images/logos/happily-clappily-ever-laughter-logo.png" alt="Happily Clappily Ever Laughter logo">
                         </div>
                         <h4>Patricia Byrne</h4>
                         <p class="center">CEO,<br>Happily Clappily Ever Laughter</p>
@@ -291,7 +291,7 @@
                     <div class="mySlides fade">
                         <q>It was a pleasure to work with Sybil to create my Shopify website. She has excellent technical skills and she is very client-oriented: she always communicated so I had regular updates on what was achieved and estimated timelines to manage my expectations. She is always looking to improve and is a very hard worker. I would recommend her to anyone looking for a partner to nail their website!</q>
                         <div class="center">
-                            <img src="https://sybiltec.com/images/logos/KYOSK-Logo.png" alt="KYOSK">
+                            <img src="https://sybiltec.com/images/logos/KYOSK-Logo.png" alt="KYOSK logo">
                         </div>
                         <h4>Shaheen Javid</h4>
                             <p class="center">CEO,<br>KYOSK</p>
@@ -299,7 +299,7 @@
                     <div class="mySlides fade">
                         <q>Sybil is a diligent professional, who is not only highly knowledgeable, but is also a delight to work with! She provided my organisation with a website audit and I was thrilled with the results! The audit was very clearly laid out so I knew exactly what to do to rectify issues, thanks to her plain English non-technical explanations. I would highly recommend Sybil's services to anyone!</q>
                         <div class="center">
-                            <img src="https://sybiltec.com/images/logos/Focus-on-Learning-logo.png" alt="Focus on Learning">
+                            <img src="https://sybiltec.com/images/logos/Focus-on-Learning-logo.png" alt="Focus on Learning logo">
                         </div>
                         <h4>Freddie Ryder</h4>
                         <p class="center">CEO,<br>
@@ -308,7 +308,7 @@
                     <div class="mySlides fade">
                         <q>I have been working with Sybil for some time now on a range of digital service projects. I would recommend her, she is hard working, highly skilled and manages to communicate digital service issues in a way that makes them jargon-free and understandable. She has delivered all the work she has taken on for us within the agreed timescale and within budget. Her work is of a high quality.</q>
                         <div class="center">
-                            <img src="https://sybiltec.com/images/logos/Future-Communities-UK-Logo.png" alt="Future Communities UK">
+                            <img src="https://sybiltec.com/images/logos/Future-Communities-UK-Logo.png" alt="Future Communities UK logo">
                         </div>
                         <h4>Gary Parker</h4>
                         <p class="center">Director,<br>
@@ -317,7 +317,7 @@
                     <div class="mySlides fade">
                         <q>Sybil is extremely thorough and professional, she pays great attention to details and she will adapt to your specific needs. She has helped me choose a platform for my domain name and website and is now helping me build the actual website for my business. I will definitely recommend Sybil to anyone wanting a high quality, personalised and reasonably priced service. Her work is top class!</q>
                         <div class="center">
-                            <img src="https://sybiltec.com/images/logos/Audrey-Zeitoun-Coaching-Logo.png" alt="Audrey Zeitoun Coaching">
+                            <img src="https://sybiltec.com/images/logos/Audrey-Zeitoun-Coaching-Logo.png" alt="Audrey Zeitoun Coaching logo">
                         </div>
                         <h4>Audrey Zeitoun</h4>
                         <p class="center">Life Transitions Coach,<br>
@@ -483,8 +483,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="images/logos/sybiltec-logo-transparent.png" alt="Sybiltech logo">
-                    <p class="center"><a href="#">Back to top</a></p>
+                <div class="logo"><img src="images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
         </div>
