--- a/install-ga4-shopify-website.html
+++ b/install-ga4-shopify-website.html
@@ -110,6 +110,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <h2>Google Analytics 4 Installation on Shopify</h2>
                 <p><strong>Date published: 19 June 2023</strong></p>
 
                 <p>You must remove password protection from your Shopify store in order to allow Google Analytics to track events.</p>
@@ -189,8 +190,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltech logo">
-                    <p class="center"><a href="#">Back to top</a></p>
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
         </div>
