--- a/training.html
+++ b/training.html
@@ -13,13 +13,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Training | London Web Design & Development | Sybiltec</title>       
-        <meta name="Description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of projects here.">
+        <meta name="Description" content="Sybil Mayard can facilitate your workshop or webinar. Past workshops have been delivered in partnership with the British Library, GLL and CNT Associates.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/training">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Training | London Web Design & Development | Sybiltec" />
-        <meta property="og:description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of projects here." />
+        <meta property="og:description" content="Sybil Mayard can facilitate your workshop or webinar. Past workshops have been delivered in partnership with the British Library, GLL and CNT Associates." />
         <meta property="og:url" content="https://sybiltec.com/training" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -171,8 +171,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltech logo">
-                    <p class="center"><a href="#">Back to top</a></p>
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
         </div>
