--- a/upgrade-google-analytics-4.html
+++ b/upgrade-google-analytics-4.html
@@ -163,7 +163,7 @@
 
                 <img src="images/screenshots/google-analytics-website-platform.png" alt="Google Analytics website platform" style="max-width: 100%;">
 
-                <p>If your platform is not listed, you can click the Install manually tab. This will show you the tracking code - copy this code and paste it into every page of your website, immediately after the <code><head></code> tag. </p>
+                <p>If your platform is not listed, you can click the Install manually tab. This will show you the tracking code - copy this code and paste it into every page of your website, immediately after the <strong>head</strong> tag. </p>
 
                 <img src="images/screenshots/google-analytics-install-manually.png" alt="Google Analytics install manually" style="max-width: 100%;">
 
@@ -227,8 +227,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltech logo">
-                    <p class="center"><a href="#">Back to top</a></p>
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
         </div>
