--- a/website-design.html
+++ b/website-design.html
@@ -170,7 +170,7 @@
                             <img src="https://sybiltec.com/images/clients/encalife-2.jpg" alt="encalife">
                         </div>
                         <div class="col-7">
-                            <h2>encalife</h2>
+                            <h2>Encalife</h2>
                             <h3 style="font-size: 18px;">Experience the unusual, every day</h3>
                             <ul>
                                 <li>Homepage and collection page design in GemPages</li>
@@ -325,8 +325,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltech logo">
-                    <p class="center"><a href="#">Back to top</a></p>
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
         </div>
