--- a/website-maintenance.html
+++ b/website-maintenance.html
@@ -102,7 +102,7 @@
                     <li>Theme customisations</li>
                     <li>Managing products (if you have an e-commerce store)</li>
                 </ul>
-            <!-- <h2>Packages</h2>
+            <h2>Packages</h2>
             <div class="row">
                 <div class="col-4">
                     <div class="blog-card">       
@@ -113,9 +113,9 @@
                                 <li>Website backup</li>
                                 <li>1 hour of updates per month</li>
                             </ul>
-                            <h4>£30.00 per month</h4>
+                            <h4>£50.00 per month</h4>
                             <div class="padding-bottom padding-top">
-                                <a class="btn-primary" href="https://buy.stripe.com/14k5kseVia2ZfVmcMM" target="_blank">Buy Now</a>   
+                                <a class="btn-primary" href="https://buy.stripe.com/5kA4go3cA1wtaB29AB" target="_blank">Buy Now</a>   
                             </div>
                         </div>
                     </div> 
@@ -129,9 +129,9 @@
                                 <li>Website backup</li>
                                 <li>2 hours of updates per month</li>
                             </ul>
-                            <h4>£50.00 per month</h4>
+                            <h4>£90.00 per month</h4>
                             <div class="padding-bottom padding-top">
-                                <a class="btn-primary" href="https://buy.stripe.com/5kA4go3cA1wtaB29AB" target="_blank">Buy Now</a>   
+                                <a class="btn-primary" href="https://buy.stripe.com/aEU28g14scb77oQdQW" target="_blank">Buy Now</a>   
                             </div>
                         </div>
                     </div>
@@ -145,14 +145,14 @@
                                 <li>Website backup</li>
                                 <li>5 hours of updates per month</li>
                             </ul>
-                            <h4>£100.00 per month</h4>
+                            <h4>£175.00 per month</h4>
                             <div class="padding-bottom padding-top">
-                                <a class="btn-primary" href="https://buy.stripe.com/cN2cMU4gEejf7oQ4gi" target="_blank">Buy Now</a>   
+                                <a class="btn-primary" href="https://buy.stripe.com/5kA3ck14s7URaB24gl" target="_blank">Buy Now</a>   
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>    -->
+            </div>   
 
             <h2>Website Maintenance Clients</h2>
             <div id="gdpr-compliance-consultancy" class="shadow-box-2">                         
@@ -265,8 +265,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltech logo">
-                    <p class="center"><a href="#">Back to top</a></p>
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
         </div>
