--- a/website-review.html
+++ b/website-review.html
@@ -108,7 +108,7 @@
                 <p>The report will be provided to you in PDF format and includes recommended actions to resolve the issues.</p>
                 <p>Download a sample website review below:</p>
 
-                <div class="center"><a href="https://sybiltec.com/uploads/Sybiltec-Sample-Website-Review.pdf" target="_blank" rel="noopener noreferrer"><img src="https://sybiltec.com/images/Sybiltec-Sample-Website-Review.jpg" style="width: 100%; max-width: 560px;"></a></div>
+                <div class="center"><a href="https://sybiltec.com/uploads/Sybiltec-Sample-Website-Review.pdf" target="_blank" rel="noopener noreferrer"><img src="https://sybiltec.com/images/Sybiltec-Sample-Website-Review.jpg" alt="Sybiltec sample website review" style="width: 100%; max-width: 560px;"></a></div>
 
             <h2 class="padding-top">Website Review Clients</h2>
             <div id="focus-on-learning" class="shadow-box-2">                         
@@ -174,8 +174,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltech logo">
-                    <p class="center"><a href="#">Back to top</a></p>
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
         </div>
