--- a/install-ga4-wordpress-website.html
+++ b/install-ga4-wordpress-website.html
@@ -110,6 +110,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                <h2>Google Analytics 4 Installation on WordPress</h2>
                 <p><strong>Date published: 19 June 2023</strong></p>
 
                 <p>Ensure that your WordPress website is not password-protected or in maintenance mode before proceeding.</p>
@@ -196,8 +197,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltech logo">
-                    <p class="center"><a href="#">Back to top</a></p>
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
         </div>
