--- a/leaflet-design.html
+++ b/leaflet-design.html
@@ -95,7 +95,7 @@
         </div>
         <div class="main section">
             <div class="container-1140 padding-top padding-bottom">
-                <p>A selection of posters, flyers and leaflet designs.</p>
+                <h2>Posters, flyers and social media post designs</h2>
                 <div class="design padding-top">
                     <img id="0" class="myImg" src="images/design/0.jpg" alt="Laugh, Sing & Play leaflet" onClick="openModal(0)">
                     <img id="1" class="myImg" src="images/design/1.jpg" alt="Funding and Support for Women-led Businesses 14 September 2023" onClick="openModal(1)">
@@ -166,8 +166,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltech logo">
-                    <p class="center"><a href="#">Back to top</a></p>
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
         </div>
