--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -95,7 +95,6 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2>Terms and Conditions</h2>
                 <p>These terms and conditions are the contract between you and Sybil Mayard trading as Sybiltec ("us", "we", etc). By visiting or using Our Website, you agree to be bound by them.</p>
 
                 <p>They are based on a set written by Net Lawman and released under licence. They protect your rights as well as ours.</p>
@@ -108,7 +107,7 @@
 
                 <p>These are the agreed terms:</p>
 
-                <h3>1. Definitions</h3>
+                <h2>1. Definitions</h2>
                 <p>"Content" means the textual, visual or aural content that is encountered as part of your experience on Our Website. It may include, among other things: text, images, sounds, videos and animations.</p>
 
                 <p>"Intellectual Property" means intellectual property owned by us, of every sort, whether or not registered or registrable in any country, including intellectual property of all kinds coming into existence after today; and including, among others, patents, trade marks, unregistered marks, designs, copyrights, software, domain names, discoveries, creations and inventions, together with all rights which are derived from those rights.</p>
@@ -116,7 +115,7 @@
                 <p>"Our Website" means any website or service designed for electronic access by mobile or fixed devices which is owned or operated by us.<br>
                 "Services" means the service provided from Our Website.</p>
 
-                <h3>2. Children on Our Website</h3>
+                <h2>2. Children on Our Website</h2>
                 <p>
                     2.1. Whatever the age of consent in your country, we are anxious that they should be protected from unsuitable<br> Content. To protect your children, you should know our policy, which is as follows:<br> 
                     2.2. In the children categories, our volunteers have checked both the entries, and, where relevant, the links.<br> 
@@ -129,7 +128,7 @@
                     2.9. You now agree to waive any claim you may otherwise have against us on account of age-related suitability of Content and to indemnify us against any claim made by any person on behalf of a child in your care.<br> 
                 </p>
 
-                <h3>3. Intellectual Property</h3>
+                <h2>3. Intellectual Property</h2>
                 <p>You agree that at all times you will:</p>
                 <p>
                     3.1. not do anything which does or might reduce the value of our Intellectual Property or challenge our ownership of it.<br> 
@@ -142,7 +141,7 @@
                     3.4. not use the Intellectual Property except directly as intended by this agreement or in our interest.<br>
                 </p>
 
-                <h3>4. Disclaimers and limitation of liability</h3>
+                <h2>4. Disclaimers and limitation of liability</h2>
                 <p>
                     4.1. The law differs from one country to another. This paragraph applies so far as the applicable law allows.<br>
                     4.2. All implied conditions, warranties and terms are excluded from this agreement. If in any jurisdiction an implied condition, warrant or term cannot be excluded, then this sub paragraph shall be deemed to be reduced in effect, only to the extent necessary to release that specific condition, warranty or term.<br>
@@ -161,7 +160,7 @@
                     4.9. This paragraph (and any other paragraph which excludes or restricts our liability) applies to our directors, officers, employees, subcontractors, agents and affiliated companies (who may enforce this clause under the Contracts (Rights of Third Parties) Act 1999 as well as to ourselves.<br>
                 </p>
 
-                <h3>5. Miscellaneous matters</h3>
+                <h2>5. Miscellaneous matters</h2>
                 <p>
                     5.1. Our privacy policy is strong and precise. It complies fully with the Data Protection Act 2018 which is located <a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">here</a>.<br>
                     5.2. If any term or provision of this agreement is at any time held by any jurisdiction to be void, invalid or unenforceable, then it shall be treated as changed or reduced, only to the extent minimally necessary to bring it within the laws of that jurisdiction and to prevent it from being void and it shall be binding in that changed or reduced form. Subject to that, each provision shall be interpreted as severable and shall not in any way affect any other of these terms.<br>
@@ -218,8 +217,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltech logo">
-                    <p class="center"><a href="#">Back to top</a></p>
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
         </div>
