--- a/index.html
+++ b/index.html
@@ -399,17 +399,23 @@
                 <h2>Partners</h2>
                 <hr>
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-2">
+                        <a href="http://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="images/logos/fsb-member-logo-PNG.webp" alt="Visit FSB's website"></a>
+                    </div>
+                    <div class="col-2">
                         <img src="images/logos/shopify-partners.png" alt="Shopify Partners">
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
                         <img src="images/logos/wix.png" alt="Wix">
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
                         <img src="images/logos/wordpress.png" alt="WordPress">
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
                         <img src="images/logos/cnt-associates.png" alt="CNT Associates">
+                    </div>
+                    <div class="col-2">
+                        <img src="images/logos/bigcommerce-logo.jpg" alt="BigCommerce">
                     </div>
                 </div>
             </div>
