Add new blog post

--- a/blog.html
+++ b/blog.html
@@ -95,10 +95,16 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                    <h2>10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</h2>
+                    <p>A fast loading WordPress site is essential for a good user experience and SEO. In this blog post we discus 10 steps you can take to maximise your site's speed. …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/fix-slow-wordpress-website">Read More</a>
+                <div class="padding-top">
                     <h2>How to Install GA4 on Your WordPress Website</h2>
                     <p>Ensure that your WordPress website is not password-protected or in maintenance mode before proceeding. …</p>
                     <br>
                     <a class="btn-primary" href="https://sybiltec.com/install-ga4-wordpress-website">Read More</a>
+                </div>
                 <div class="padding-top">
                     <h2>How to Install GA4 on Your Wix Website</h2>
                     <p>Your website must be on a Wix Premium Plan in order to connect Google Analytics to it. …</p>
