Update blog about slow WordPress site

--- a/blog.html
+++ b/blog.html
@@ -96,7 +96,7 @@
         <div class="main section">
             <div class="container-1140">
                     <h2>10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</h2>
-                    <p>A fast loading WordPress site is essential for a good user experience and SEO. In this blog post we discus 10 steps you can take to maximise your site's speed. …</p>
+                    <p>A fast loading WordPress site is essential for good user experience and SEO. In this blog post we discuss 10 steps you can take to maximise your site's speed. …</p>
                     <br>
                     <a class="btn-primary" href="https://sybiltec.com/fix-slow-wordpress-website">Read More</a>
                 <div class="padding-top">
