--- a/index.html
+++ b/index.html
@@ -347,15 +347,30 @@
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps"><img src="https://sybiltec.com/images/mr-bean-waiting-350x183.png" 
+                                alt="Mr Bean waiting"></a>     
+                            <div class="blog-card-text">           
+                                <h3>10 Reasons Why Your WordPress Website is Slow</h3>
+                                <p>08 December 2023</p>
+                                <p>In this article we discuss reasons why your WordPress website may be experiencing poor performance, and how to fix the issues.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/fix-slow-wordpress-website">Fix My Site!</a>   
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
                     <div class="col-4">          
                         <div class="blog-card">  
                             <a href="https://sybiltec.com/upgrade-google-analytics-4"><img src="images/person-using-google-analytics-on-macbook-air-350x183.jpg" 
                                 alt="Person using Google Analytics on MacBook Air"></a>  
                             <div class="blog-card-text">               
                                 <h3>How Do I Upgrade to Google Analytics 4?</h3>
+                                <p>15 June 2023</p>
                                 <p>If you are still using Universal Analytics, you must upgrade to GA4 before 1st July 2023 to avoid losing data. Read my blog post to learn how to perform the update.</p>
                                 <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/upgrade-google-analytics-4">Read Blog</a>   
+                                    <a class="btn-primary" href="https://sybiltec.com/upgrade-google-analytics-4">Upgrade GA Now</a>   
                                 </div>
                             </div>
                         </div>
@@ -367,25 +382,13 @@
                                 alt="Shopify vs WooCommerce"></a>
                             <div class="blog-card-text">                    
                                 <h3>Shopify vs WooCommerce: What Are the Differences?</h3>
+                                <p>11 June 2023</p>
                                 <p>Read this article to learn about the two most popular e-commerce platforms and help you choose the best option for your business.</p>
                                 <div class="padding-bottom padding-top">
                                     <a class="btn-primary" href="https://sybiltec.com/shopify-woocommerce">Read Blog</a>   
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps"><img src="images/ux-work-womans-hands-drawing-wireframe-350x183.jpg" 
-                                alt="UX work: woman's hands drawing a wireframe"></a>     
-                            <div class="blog-card-text">           
-                                <h3>The Web Design Process Explained in 12 Easy Steps</h3>
-                                <p>If you're wondering what the web design process is like, I've outlined the steps in this blog to help you understand what is involved.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/web-design-process-explained-12-easy-steps">Read Blog</a>   
-                                </div>
-                            </div>
-                        </div> 
                     </div>
                 </div>
             </div>
