Update page titles and sitemap

--- a/leaflet-design.html
+++ b/leaflet-design.html
@@ -12,13 +12,13 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Leaflet Design | London Web Design & Development | Sybiltec</title>       
+        <title>Leaflet Design | Erith Bexley South East London | Sybiltec</title>       
         <meta name="Description" content="Are you organising or promoting an event? Sybil Mayard can design a poster, leaflet, flyer or social media graphic. View the gallery of my past design projects.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/leaflet-design">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Leaflet Design | London Web Design & Development | Sybiltec" />
+        <meta property="og:title" content="Leaflet Design | Erith Bexley South East London | Sybiltec" />
         <meta property="og:description" content="Are you organising or promoting an event? Sybil Mayard can design a poster, leaflet, flyer or social media graphic. View the gallery of my past design projects." />
         <meta property="og:url" content="https://sybiltec.com/leaflet-design" />
         <meta property="og:site_name" content="Sybiltec" />
