--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -12,12 +12,12 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Terms & Conditions | London Web Design & Development | Sybiltec</title>       
+        <title>Terms & Conditions | Web Designer South East London | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard provides web design and development services for small businesses in Shopify, WordPress and Wix. Read my terms and conditions here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Terms & Conditions | London Web Design & Development | Sybiltec" />
+        <meta property="og:title" content="Terms & Conditions | Web Designer South East London | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard provides web design and development services for small businesses in Shopify, WordPress and Wix. Read my terms and conditions here." />
         <meta property="og:url" content="https://sybiltec.com/terms-and-conditions" />
         <meta property="og:site_name" content="Sybiltec" />
