--- a/website-maintenance.html
+++ b/website-maintenance.html
@@ -12,13 +12,13 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Website Maintenance | London Web Design & Development | Sybiltec</title>       
+        <title>Website Maintenance | Erith Bexley South East London | Sybiltec</title>       
         <meta name="Description" content="Once you have launched your website, you'll need to keep it maintained. Purchase one of Sybil Mayard's website maintenance services for ongoing support.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/website-maintenance">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Website Maintenance | London Web Design & Development | Sybiltec" />
+        <meta property="og:title" content="Website Maintenance | Erith Bexley South East London | Sybiltec" />
         <meta property="og:description" content="Once you have launched your website, you'll need to keep it maintained. Purchase one of Sybil Mayard's website maintenance services for ongoing support." />
         <meta property="og:url" content="https://sybiltec.com/website-maintenance" />
         <meta property="og:site_name" content="Sybiltec" />
