--- a/blog.html
+++ b/blog.html
@@ -12,13 +12,13 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog | London Website Design & Development | Sybiltec</title>       
+        <title>Blog | Web Designer Erith Bexley South East London | Sybiltec</title>       
         <meta name="Description" content="Sybiltec provides website development and e-commerce services for SMEs. Read my blog posts to learn about the latest industry news and company updates.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/blog">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Blog | London Website Design & Development | Sybiltec" />
+        <meta property="og:title" content="Blog | Web Designer Erith Bexley South East London | Sybiltec" />
         <meta property="og:description" content="Sybiltec provides website development and e-commerce services for SMEs. Read my blog posts to learn about the latest industry news and company updates." />
         <meta property="og:url" content="https://sybiltec.com/blog" />
         <meta property="og:site_name" content="Sybiltec" />
