--- a/clients.html
+++ b/clients.html
@@ -12,12 +12,12 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Clients | London Web Design & Development | Sybiltec</title>       
+        <title>Clients | Web Designer Erith Bexley South East London | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of clients here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Clients | London Web Design & Development | Sybiltec" />
+        <meta property="og:title" content="Clients | Web Designer Erith Bexley South East London | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of clients here." />
         <meta property="og:url" content="https://sybiltec.com/clients" />
         <meta property="og:site_name" content="Sybiltec" />
