--- a/website-design.html
+++ b/website-design.html
@@ -12,13 +12,13 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Website Design | London Web Design & Development | Sybiltec</title>       
+        <title>Website Design | Erith Bexley South East London | Sybiltec</title>       
         <meta name="Description" content="Designing a beautiful website is of utmost importance for a strong online presence. Learn about Sybil Mayard's custom website design service for SMEs here. ">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/website-design">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Website Design | London Web Design & Development | Sybiltec" />
+        <meta property="og:title" content="Website Design | Erith Bexley South East London | Sybiltec" />
         <meta property="og:description" content="Designing a beautiful website is of utmost importance for a strong online presence. Learn about Sybil Mayard's custom website design service for SMEs here. " />
         <meta property="og:url" content="https://sybiltec.com/website-design" />
         <meta property="og:site_name" content="Sybiltec" />
