--- a/website-development.html
+++ b/website-development.html
@@ -12,13 +12,13 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Website Development | London Web Design & Development | Sybiltec</title>       
+        <title>Website Development Erith Bexley South East London | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard's website development service is perfect for you if you have an existing website and need bespoke, one-off development tasks to be completed.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/website-development">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Website Development | London Web Design & Development | Sybiltec" />
+        <meta property="og:title" content="Website Development Erith Bexley South East London | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard's website development service is perfect for you if you have an existing website and need bespoke, one-off development tasks to be completed." />
         <meta property="og:url" content="https://sybiltec.com/website-development" />
         <meta property="og:site_name" content="Sybiltec" />
