Fix Open Graph tag

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Home | Web Designer Erith Bexley South East London | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation." />
-        <meta property="og:url" content="https://sybiltec.com" />
+        <meta property="og:url" content="https://sybiltec.com/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
